--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -8,19 +8,44 @@ h2{
     font-weight: 400;
 }
 
+
+.section-content{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+form{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 div.formSection, .form-subsection{
     display:flex;
     justify-content: space-between;
     gap: 10px;
+}
+div.formSection.skills{
     align-items: end;
 }
+
+div.formSection span, div.formSection input{
+    flex-grow: 1;
+}
+    
 div.formSection{
     margin-top: 10px;
 }
 
-div.formSection *{
-    flex-grow: 1;
+.textarea-section{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
 }
+
 span.input{
     display:flex;
     flex-direction: column;
@@ -31,16 +56,22 @@ label{
     font-size: 15px;
     margin-bottom: 5px;
 }
-input,textarea{
+input{
     height: 32px;
+}
+input,textarea{
     border: solid rgb(226, 232, 240) 1px;
     border-radius: 5px;
     padding: 0 8px;
 }
 textarea{
-    height: 160px;
+    flex: 1;
+    /*height: 160px;*/
     padding: 10px;
     resize: none;
+    /*min-height: 1em;
+    max-height: 10em;*/
+    min-height: 0;
 }
 
 span.skill{
@@ -56,6 +87,7 @@ button.add{
 .delete span{
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 button.delete{
     background-color: rgb(239 68 68);
@@ -63,4 +95,8 @@ button.delete{
     flex-grow: 0;
     height: 32px;
     aspect-ratio: 1;
+}
+
+.entryMgmt{
+    margin-top: 15px;
 }
